fix: ensure API playground name is visible in okta

--- a/packages/react-saasify/src/themes/okta.module.css
+++ b/packages/react-saasify/src/themes/okta.module.css
@@ -121,3 +121,7 @@ body header + section:first-of-type .title {
     padding: 3em 0.5em;
   }
 }
+
+.theme-okta .live-service-demo .footer__service__name {
+  color: #de7443;
+}
